--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   introduction_screen: ^3.1.8
   smooth_page_indicator: ^1.1.0
   url_launcher: ^6.1.11
+  syncfusion_flutter_pdfviewer: ^24.1.43
 
 dev_dependencies:
   flutter_test:
